# djoko_quest

./: .gitignore  README.md  apple_packages.txt  characters.py  converstation_chain.py  create_player.py  items.py  llm.py  main.py  player.py  requirements.txt  savefile.json  stage_1.py  stage_2.py  stages.py  test.py
djoko-quest/: pyproject.toml
docs/: DJOKOQUEST design doc.docx  how_to_mac.txt  to do.txt
scenes_text/: island_campfire.py  stage_two_text.py
src/: characters.py  fight.py  items.py  locations.py  player_options.py  save_game.py  stage_1.py  stage_1_objects.py  stage_2.py  stage_2_objects.py  utils  utils.py
src/scenes_text/: island_campfire.py  stage_two_text.py
src/utils/: clear_screen.py  create_player.py  healthbar.py  llm.py  utils.py
