[project]
name = "djoko-quest"
version = "0.1.0"
description = ""
authors = [
    {name = "Jelle",email = "jelle.vanelburg@coolblue.nl"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
